storage-node-v2: Update upload method.
